--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ iniconfig==1.1.1
 ipython==7.16.3
 ipython-genutils==0.2.0
 jedi==0.17.2
+lipsum==0.1.2
 mysqlclient==2.1.0
 openpyxl==3.0.9
 packaging==21.3
