--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 django==3.2.17
 mysqlclient==2.1.1
 django-cryptography==1.1
+django-ipware==4.0.2
 djangorestframework==3.14.0
+ipparser==0.3.8
 pycryptodomex==3.16.0
 openpyxl==3.1.0
 requests==2.27.1
